DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[2.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 1.1.172
May-19-2005 aronb       Fixed a bug where the Draw Manager could direct an
                        application object to render after the kernel told the
                        application object that it was being closed.  This
                        fixes a general problem with OpenSG-based applications
                        crashing when exited through the kernel.
                        NEW VERSION: 1.1.171
May-11-2005 allenb      Updated OpenSG app to protect GL state with push/pop
                        attrib.
                        Added normals to the default sim wand drawing code.
Apr-18-2005 allenb      Use default value for kernel parameter to app object
                        constructors.
                        NEW VERSION: 1.1.170
Mar-11-2005 patrickh    Added a new sample application: OpenSGNavGrab
Mar-10-2005 patrickh    Removed scale node from the scene graph set up by
                        vrj::OpenSGApp.
                        NEW VERSION: 1.1.169
Mar-09-2005 patrickh    Added the ability to choose a specific GL visual when
                        configuring a Performer window.
Mar-09-2005 patrickh    Extended the OpenGL frame buffer configuration to allow
                        setting preferences for the auxiliary buffers, the
                        stencil buffer, and the accumulation buffer.
                        NEW VERSION: 1.1.168
Feb-03-2005 patrickh    Use JCCL 0.92.1 handling of the .jdef search path.
                        Now, $JCCL_DEFINITION_PATH augments the .jdef search
                        path rather than defining it outright.
Jan-31-2005 patrickh    Separated the builds for VR Juggler and VRJConfig.
