@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
+                        NEW VERSION: 1.1.173
+
 [2.0 Beta 3 released - 6.7.2005]===============================================
 Jun-07-2005 patrickh    NEW VERSION: 1.1.172
 May-19-2005 aronb       Fixed a bug where the Draw Manager could direct an
